--- a/src/App.module.css
+++ b/src/App.module.css
@@ -90,7 +90,7 @@ text-transform: none;
         margin: 0 10%; 
     }
     .image{
-        background-color: seashell;
+        background-color: rgb(255, 255, 255);
         width: 100%;
     }
 }
